# InboXpert

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: agent_runner.py  main.py
frontend/: app.py
